# ComputeDuck

./: .gitignore  .gitmodules  Allocator.cpp  Allocator.h  Ast.h  Ast.py  BuiltinManager.cpp  BuiltinManager.h  BuiltinManager.py  CMakeLists.txt  Chunk.cpp  Chunk.h  Chunk.py  Compiler.cpp  Compiler.h  Compiler.py  ComputeDuck.csproj  Config.cpp  Config.h  ConstantFolder.cpp  ConstantFolder.h  Frame.cpp  Frame.h  Grammer.ebnf  HashTable.cpp  HashTable.h  Jit.cpp  Jit.h  JitUtils.cpp  JitUtils.h  LLVMCompiler.cpp  LLVMCompiler.h  LLVMCompilerImpl.cpp  LLVMCompilerImpl.h  LLVMJit.cpp  LLVMJit.h  Lexer.cpp  Lexer.h  Lexer.py  Object.cpp  (+28 more)
Chapter1/: Allocator.h  Chunk.cpp
Chapter2/: Lexer.h
Chapter4/: Chunk.cpp  Compiler.cpp  Lexer.h  Parser.h  Utils.h
Chapter4/examples/: test.cd
Chapter5/: Ast.h  Parser.h  Utils.h
Chapter6/: Allocator.h  Chunk.cpp  VM.cpp
Chapter8/: Allocator.cpp  Allocator.h  Chunk.h  Compiler.h  Lexer.cpp  Object.h  Parser.h  Token.h  VM.cpp
book-sample-code/Chapter1/: Allocator.h  CMakeLists.txt  Chunk.h  Utils.h  VM.h  Value.h  main.cc
book-sample-code/Chapter2/: Ast.h  Chunk.cpp  Chunk.h  Compiler.cpp  Compiler.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Token.h  Utils.h  VM.cpp  Value.cpp  Value.h  main.cc
book-sample-code/Chapter3/: Allocator.cpp  Allocator.h  Ast.h  Lexer.cpp  Lexer.h  Token.h  VM.cpp  Value.cpp  Value.h  main.cc
book-sample-code/Chapter4/: Allocator.h  Ast.h  Compiler.h  Lexer.cpp  Object.cpp  Object.h  Token.h  Value.cpp
book-sample-code/Chapter5/: Chunk.cpp  Chunk.h  Compiler.cpp  Config.h  Object.h  Parser.cpp  VM.cpp  Value.h  main.cc
book-sample-code/Chapter6/: Ast.h  Chunk.h  Compiler.cpp  Compiler.h  Parser.cpp  Parser.h
book-sample-code/Chapter7/: Allocator.h  Ast.h  Compiler.cpp  Object.cpp  Parser.h  SymbolTable.h  Token.h  main.cc
book-samples/chapter1/: Allocator.h  CMakeLists.txt  Chunk.cpp  Chunk.h  Utils.h  VM.cpp  main.cc
book-samples/chapter10/: Allocator.cpp  Allocator.h  Ast.h  Chunk.cpp  Chunk.h  Compiler.cpp  Compiler.h  Lexer.cpp  Lexer.h  Object.cpp  Object.h  Parser.cpp  Parser.h  SymbolTable.h  Token.h  Utils.cpp  Utils.h  VM.cpp  VM.h  Value.h  main.cc
book-samples/chapter11/: Allocator.cpp  Allocator.h  Ast.h  BuiltinManager.cpp  BuiltinManager.h  Chunk.cpp  Chunk.h  Compiler.cpp  Compiler.h  HashTable.cpp  HashTable.h  Lexer.cpp  Object.cpp  Object.h  Parser.cpp  Parser.h  SymbolTable.h  Token.h  Utils.h  VM.cpp  VM.h  main.cc
book-samples/chapter12/: Allocator.cpp  Allocator.h  Ast.h  Chunk.cpp  Chunk.h  Compiler.cpp  Compiler.h  Object.cpp  Object.h  Parser.h  SymbolTable.h  Utils.h  VM.cpp  Value.h
book-samples/chapter13/: Ast.h  Chunk.cpp  Chunk.h  Compiler.cpp  Compiler.h  HashTable.cpp  Lexer.cpp  Object.cpp  Object.h  Parser.cpp  Parser.h  SymbolTable.h  Token.h  VM.cpp  Value.h  main.cc
book-samples/chapter14/: Allocator.cpp  Allocator.h  Ast.h  BuiltinManager.cpp  Chunk.cpp  Chunk.h  Compiler.cpp  Compiler.h  HashTable.h  Lexer.cpp  Object.cpp  Object.h  Parser.cpp  Parser.h  SymbolTable.h  Token.h  Utils.h  VM.cpp  VM.h  Value.cpp  Value.h
book-samples/chapter15/: Allocator.cpp  Allocator.h  BuiltinManager.cpp  Compiler.cpp  HashTable.cpp  HashTable.h  Object.cpp  Object.h  Token.h  VM.cpp  Value.cpp  Value.h
book-samples/chapter16/: BuiltinManager.cpp  BuiltinManager.h  Compiler.h  Config.h  ConstantFolder.cpp  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Value.cpp  Value.h
book-samples/chapter17/: Allocator.h  Chunk.cpp  Chunk.h  Compiler.cpp  Config.cpp  Config.h  HashTable.cpp  Lexer.cpp  Object.h  Parser.cpp  Parser.h  PreProcessor.h  Token.h  Value.cpp  main.cc
book-samples/chapter18/: Allocator.cpp  Ast.h  CMakeLists.txt  Chunk.cpp  Chunk.h  Compiler.cpp  Compiler.h  Config.cpp  Config.h  HashTable.h  Lexer.cpp  Object.cpp  Object.h  Parser.cpp  Parser.h  Token.h  Utils.cpp  Utils.h  VM.cpp  Value.cpp  main.cc
book-samples/chapter18/examples/: sdl2-opengl.cd
book-samples/chapter2/: Allocator.cpp  CMakeLists.txt  Chunk.cpp  Chunk.h  Compiler.cpp  Compiler.h  (+3 more)
book-samples/chapter4/: Allocator.cpp  Allocator.h  CMakeLists.txt  Chunk.cpp  Chunk.h  Compiler.cpp  Config.cpp  Object.cpp  Parser.cpp  Utils.h  VM.cpp  main.cc
c#/: ComputeDuck.sln  Context.cs  Frame.cs  Lexer.cs  Object.cs  VM.cs  Value.cs  main.cs
c#-impl/: ComputeDuck.csproj
cpp/: Allocator.cpp  Allocator.h  Ast.h  BuiltinFunctionManager.cpp  BuiltinFunctionManager.h  BuiltinManager.cpp  BuiltinManager.h  CMakeLists.txt  Chunk.cpp  Chunk.h  Compiler.cpp  Compiler.h  Config.cpp  Config.h  ConstantFolder.cpp  ConstantFolder.h  Context.cpp  Context.h  Frame.cpp  Frame.h  Jit.cpp  Jit.h  LLVMCompilerImpl.cpp  LLVMCompilerImpl.h  LLVMJit.cpp  LLVMJit.h  LLVMJitVM.cpp  LLVMJitVM.h  Lexer.cpp  Lexer.h  Object.cpp  Object.h  OpCodeCompilerImpl.cpp  OpCodeVM.cpp  OpCodeVM.h  Parser.cpp  Parser.h  PreProcessor.h  SDL2Test.cpp  SemanticAnalyzer.cpp  (+11 more)
csharp/: Ast.cs  Compiler.cs  Context.cs  Lexer.cs  Object.cs  Parser.cs  Token.cs  Utils.cs  VM.cs  main.cs
examples/: Vec3.cd  Vec4.cd  Vec5.cd  VecImport.cd  anonymous-struct.cd  array.cd  array.lws  continuous-ref.cd  fibonacci-lambda.cd  fibonacci-tail-recursive.cd  fibonacci.cd  function-scope.cd  function.cd  function.lws  if.cd  jit-function.cd  lambda.cd  leetcode-twosum.cd  linkedlist.cd  local-variable.cd  oop-simulate.cd  ref.cd  scope.cd  sdl2-opengl.cd  sdl2.cd  struct.cd  struct.lws  upvalue.cd  var.cd  var.lws  vec-import.cd  vec2.cd  vec3.cd  vec4.cd  vec5.cd  while.cd  while.lws
libComputeDuck/: ConstantFolder.cs  Token.cs  VM.cs
py/: Ast.py  BuiltinManager.py  Chunk.py  Compiler.py  ConstantFolder.py  Context.py  Frame.py  Lexer.py  Object.py  Parser.py  SemanticAnalyzer.py  SymbolTable.py  Token.py  Utils.py  VM.py  library-sdl2.py  main.py
python/: Ast.py  BuiltinManager.py  Chunk.py  Compiler.py  ConstantFolder.py  Lexer.py  Object.py  Parser.py  PreProcessor.py  SymbolTable.py  Token.py  Utils.py  VM.py  library-cdopengl.py  library-cdsdl2.py  main.py
python-impl/: Ast.py  BuiltinManager.py  PreProcessor.py  Utils.py
(+164 files in other folders)
